[package]
name = "oscar-io"
version = "0.1.1"
edition = "2021"
description = "Readers/Writers for OSCAR Corpora."
documentation = "https://docs.rs/oscar-io"
homepage = "https://oscar-corpus.com"
repository = "https://github.com/oscar-corpus/oscar-io"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
log = "0.4.16"
schemars = "0.8.8"
serde = "1.0.136"
serde_json = "1.0.79"
warc = { version = "0.3.1", features = ["with_serde"]}
#[derive(Serialize, Deserialize)]

avro-rs = { version = "0.13.0", features = ["snappy"]}
oxilangtag = { version = "0.1.3", features = ["serde"]}

